--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.4.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
